# Projet-traitement-donn--1A

./: .flake8  .gitignore  AUTHORS.md  README.md  __main__.py  main.py  pyproject.toml  requirements.txt
configs/: config_badminton.json  config_basket.json  config_counter_strike_2.json  config_echecs.json  config_football.json  config_football_champions_league.json  config_lol.json  config_starcraft_2.json  config_tennis_ATP.json  config_volley_men.json
data/: players.csv
donnees/volley/: coach_men.csv  coach_women.csv  country.csv  match_men.csv  match_women.csv  player_men.csv  player_women.csv
src/Analysis/: ranking_engine.py  search_engine.py  statistiques.py
src/Analysis/homemade/: GoatFinder.py
src/Analysis/pandas/: GoatFinder.py
src/Common/: utils.py
src/Core/: app_controller.py
src/Infrastructure/: data_loader.py  gestionnaire_csv.py
src/Model/: athlete.py  coach.py  competition.py  equipe.py  match.py  participant.py  performance.py  personne.py
src/Parsers/: manager.py  parse_csv.py
src/UI/: affichage.py  graphiques.py  menus.py
test/: conftest.py  test_integration_fonctionnel.py
test/Analysis/: test_ranking_engine.py  test_search_engine.py  test_statistiques.py
test/Analysis/homemade/: test_GoatFinder.py
test/Common/: test_utils.py
test/Core/: test_app_controller.py
test/Infrastructure/: test_data_loader.py  test_gestionnaire_csv.py
test/Model/: test_Player.py  test_athlete.py  test_coach.py  test_competition.py  test_equipe.py  test_match.py  test_performance.py
test/Parsers/: players.csv  test_parse_csv.py
test/UI/: test_affichage.py  test_menus.py
