[project]
name = "projet-traitement-donnees"
description = "Application de gestion de résultats sportifs (Jeux Olympique 2024)"
version = "2026.2.0"
requires-python = ">=3.14"
dependencies = [
    "pandas",
    "pandas-stubs",
    "matplotlib",
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "black"
]
authors = [
  {name = "Kilian Crumbach"},
  {name = "Ryan Alves"},
  {name = "Mael Fretté"},
  {name = "Raphaëlle Belaygues"},
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
preview = true
extend-select = ["E", "F", "W", "I"]

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
explicit_package_bases = true
exclude = ["venv", ".git", "__pycache__", ".mypy_cache", "test_", "conftest.py"]
